# melodai-min

./: .gitignore  Dockerfile  example.env  pyproject.toml  requirements.txt
src/: admin.html  deezer.py  helpers.py  index.html  login.html  main.py  schema.sql
